--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,16 +35,16 @@ $app-direction: ltr;
 
 $colors: (
     primary:    #488aff,
-    secondary:  #32db64,
+    secondary:  #00bb37,
     danger:     #f53d3d,
-    light:      #f4f4f4,
+    light:      #dcdcdc,
     dark:       #222,
     warning:      (
         base: #ffc107,
         contrast: #ffffff
     ),
     info:      (
-        base: #0cd1e8,
+        base: #0084af,
         contrast: #ffffff
     ),
     tertiary:      (
