--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,16 @@
 page-login {
-
+    .logo {
+        padding-top: 20px;
+        width: 160px;
+        margin: auto;
+    }
+    .logo img {
+        width: 100%;
+        height: 100%;
+    }
+    .title {
+        text-align: center;
+        color: #0084af;
+        font-size: 26px;
+    }
 }
