--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,7 +14,12 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
-
+.text-right {
+    text-align: right !important;
+}
+.text-left {
+    text-align: left !important;
+}
 .text-center {
     text-align: center !important;
 }
