--- a/src/pages/forgot-success/forgot-success.scss
+++ b/src/pages/forgot-success/forgot-success.scss
@@ -1,6 +1,19 @@
 page-forgot-success {
+    .sending {
+        color: #000;
+        text-align: center;
+        font-size: 16px;
+        margin-bottom: 20px;
+        line-height: 1.6em;
+    }
     .text {
         color: #26ab0f;
+        font-size: 16px;
+        margin-bottom: 20px;
+        line-height: 1.6em;
+    }
+    .error {
+        color: #ff1c1c;
         font-size: 16px;
         margin-bottom: 20px;
         line-height: 1.6em;
