--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,8 @@
 page-login {
     .logo {
         padding-top: 20px;
-        width: 160px;
+        width: 130px;
+        height: 130px;
         margin: auto;
     }
     .logo img {
